[package]
name = "gremlin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
serde_json = "1.0.85"
serde = {version = "1.0.144", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.33"
tokio-stream = { version = "0.1.9", features = ["sync", "net"] }